--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web app to create timeline using timeline.js",
   "main": "bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint js/ --ext .js --ext .jsx"
   },
   "author": "",
   "license": "MIT",
@@ -14,5 +14,11 @@
     "backbone": "^1.2.3",
     "react": "^0.14.2",
     "webpack": "^1.12.4"
+  },
+  "devDependencies": {
+    "babel-eslint": "^4.1.5",
+    "eslint": "^1.9.0",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.8.0"
   }
 }
