--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,4 +7,4 @@ eslint:
 
 build:
     script:
-        - webpack --progress --colors
+        - ./node_modules/webpack/bin/webpack.js --progress --colors
