--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 before_script:
-    - npm install || true
+    - npm install --silent || true
 
 eslint:
     script:
@@ -7,4 +7,4 @@ eslint:
 
 build:
     script:
-        - ./node_modules/webpack/bin/webpack.js --progress --colors
+        - ./node_modules/webpack/bin/webpack.js --progress --colors --bail
