--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "babel-core": "^6.1.4",
     "babel-loader": "^6.1.0",
+    "babel-preset-es2015": "^6.1.4",
+    "babel-preset-react": "^6.1.4",
     "backbone": "^1.2.3",
     "react": "^0.14.2",
     "webpack": "^1.12.4"
