--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.1.4",
     "backbone": "^1.2.3",
+    "imports-loader": "^0.6.5",
     "react": "^0.14.2",
     "webpack": "^1.12.4"
   }
