--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.1.4",
     "backbone": "^1.2.3",
+    "css-loader": "^0.23.0",
+    "file-loader": "^0.8.4",
     "imports-loader": "^0.6.5",
+    "node-sass": "^3.4.2",
     "react": "^0.14.2",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.4"
   }
 }
