--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "file-loader": "^0.8.4",
     "imports-loader": "^0.6.5",
     "node-sass": "^3.4.2",
+    "json-loader": "^0.5.3",
     "react": "^0.14.2",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
+    "react-dom": "^0.14.2",
     "webpack": "^1.12.4"
   }
 }
