--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.1.4",
+    "babel-preset-stage-0": "^6.1.18",
     "backbone": "^1.2.3",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.4",
