--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web app to create timeline using timeline.js",
   "main": "bundle.js",
   "scripts": {
-    "lint": "eslint js/ --ext .js --ext .jsx"
+    "lint": "eslint js/ --ext .js --ext .jsx",
+    "test":"./node_modules/.bin/mocha --compilers jsx:babel-core/register,js:babel-core:register --reporter spec"
   },
   "author": "",
   "license": "MIT",
@@ -27,5 +28,9 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.4"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4"
   }
 }
