--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.4"
+  },
+  "devDependencies": {
+    "babel-eslint": "^5.0.0-beta1",
+    "eslint": "^1.10.0",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.10.0"
   }
 }
