Added test suite
Example with time.js

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "lint": "eslint js/ --ext .js --ext .jsx",
-    "test":"./node_modules/.bin/mocha --compilers jsx:babel-core/register,js:babel-core:register --reporter spec"
+    "test":"./node_modules/.bin/mocha --recursive --compilers jsx:babel-core/register,js:babel-core:register --reporter spec"
   },
   "author": "",
   "license": "MIT",
