--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.1.4",
+    "babel-core": "^6.2.4",
+    "babel-eslint": "^5.0.0-beta4",
     "babel-loader": "^6.1.0",
-    "babel-preset-es2015": "^6.1.4",
-    "babel-preset-react": "^6.1.4",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-preset-es2015": "^6.2.4",
+    "babel-preset-react": "^6.2.4",
+    "babel-preset-stage-0": "^6.2.4",
     "backbone": "^1.2.3",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.4",
