--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web app to create timeline using timeline.js",
   "main": "bundle.js",
   "scripts": {
-    "lint": "eslint js/ --ext .js --ext .jsx"
+    "lint": "./node_modules/.bin/eslint js/ --ext .js --ext .jsx"
   },
   "author": "",
   "license": "MIT",
