--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint js/ --ext .js --ext .jsx",
-    "test":"./node_modules/.bin/mocha --recursive --compilers jsx:babel-core/register,js:babel-core:register --reporter spec"
+    "test": "./node_modules/.bin/mocha --recursive --compilers jsx:babel-core/register,js:babel-core:register --reporter spec"
   },
   "author": "",
   "license": "MIT",
@@ -19,6 +19,7 @@
     "backbone": "^1.2.3",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.4",
+    "filesaver.js": "^0.2.0",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.3",
     "moment": "^2.10.6",
