--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-stage-0": "^6.2.4",
     "backbone": "^1.2.3",
     "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "filesaver.js": "^0.2.0",
     "imports-loader": "^0.6.5",
