--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^3.4.2",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-pikaday-component": "^0.2.2",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
