--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "filesaver.js": "^0.2.0",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.3",
+    "koa": "^1.1.2",
+    "koa-json": "^1.1.1",
     "moment": "^2.10.6",
     "node-sass": "^3.4.2",
     "npm": "^3.7.3",
