--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "timelinizator",
   "version": "0.0.0",
   "description": "Web app to create timeline using timeline.js",
-  "main": "bundle.js",
+  "main": "js/server/main.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon --use_strict js/server/main.js",
     "lint": "./node_modules/.bin/eslint js/ --ext .js --ext .jsx",
     "test": "./node_modules/.bin/mocha --recursive --compilers jsx:babel-core/register,js:babel-core:register --reporter spec"
   },
@@ -17,6 +18,7 @@
     "babel-preset-react": "^6.2.4",
     "babel-preset-stage-0": "^6.2.4",
     "backbone": "^1.2.3",
+    "commander": "^2.9.0",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
@@ -24,7 +26,8 @@
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.3",
     "koa": "^1.1.2",
-    "koa-json": "^1.1.1",
+    "koa-bodyparser": "^2.0.1",
+    "koa-router": "^5.4.0",
     "moment": "^2.10.6",
     "node-sass": "^3.4.2",
     "npm": "^3.7.3",
@@ -43,6 +46,7 @@
     "eslint": "^1.10.0",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.10.0",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "nodemon": "^1.9.0"
   }
 }
