--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "json-loader": "^0.5.3",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
+    "koa-mount": "^1.3.0",
     "koa-router": "^5.4.0",
+    "koa-static": "^2.0.0",
     "moment": "^2.10.6",
     "node-sass": "^3.4.2",
     "npm": "^3.7.3",
