--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.2.4",
     "babel-preset-stage-0": "^6.2.4",
     "backbone": "^1.2.3",
+    "bluebird": "^3.3.1",
     "commander": "^2.9.0",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
@@ -38,6 +39,7 @@
     "react-dom": "^0.14.2",
     "react-pikaday-component": "^0.2.2",
     "sass-loader": "^3.1.1",
+    "sequelize": "^3.19.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.4"
