--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-pikaday-component": "^0.2.2",
     "sass-loader": "^3.1.1",
     "sequelize": "^3.19.3",
+    "sha512": "0.0.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.4"
