--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web app to create timeline using timeline.js",
   "main": "js/server/main.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon --use_strict js/server/main.js -- -z",
+    "start": "./node_modules/.bin/nodemon js/server/main.js -- -z",
     "lint": "./node_modules/.bin/eslint js/ --ext .js --ext .jsx",
     "test": "./node_modules/.bin/mocha --recursive --compilers jsx:babel-core/register,js:babel-core:register --reporter spec"
   },
@@ -43,7 +43,8 @@
     "sha512": "0.0.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.4"
+    "webpack": "^1.12.4",
+    "winston": "^2.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta1",
