--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.9.1",
     "babel-core": "^6.2.4",
     "babel-eslint": "^5.0.0-beta4",
     "babel-loader": "^6.1.0",
