--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-pikaday-component": "^0.2.2",
+    "react-spin": "^0.6.0",
     "sass-loader": "^3.1.1",
     "sequelize": "^3.19.3",
     "sha512": "0.0.1",
     "style-loader": "^0.13.0",
+    "sweetalert": "^1.1.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.4",
     "winston": "^2.1.1"
