--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.9.1",
+    "axios": "^0.11.0",
     "babel-core": "^6.2.4",
-    "babel-eslint": "^5.0.0-beta4",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.2.4",
     "babel-preset-react": "^6.2.4",
@@ -22,7 +22,7 @@
     "bluebird": "^3.3.1",
     "commander": "^2.9.0",
     "css-loader": "^0.23.0",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "filesaver.js": "^0.2.0",
     "imports-loader": "^0.6.5",
@@ -34,11 +34,11 @@
     "koa-static": "^2.0.0",
     "moment": "^2.10.6",
     "node-sass": "^3.4.2",
-    "npm": "^3.7.3",
+    "npm": "^3.8.9",
     "pikaday": "^1.4.0",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
-    "react-pikaday-component": "^0.2.2",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-pikaday-component": "^2.0.1",
     "react-quill": "^0.4.1",
     "react-spin": "^0.6.0",
     "sass-loader": "^3.1.1",
@@ -53,9 +53,9 @@
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta1",
     "chai": "^3.4.1",
-    "eslint": "^1.10.0",
+    "eslint": "^2.9.0",
     "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.10.0",
+    "eslint-plugin-react": "^5.0.1",
     "mocha": "^2.3.4",
     "nodemon": "^1.9.0"
   }
